Test each step throughout process instead of at end

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -24,7 +24,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tokenization Steps"
+    "# Tokenization Steps\n",
+    "\n",
+    "In this exercise, you'll code your own tokenizer from scratching using base\n",
+    "Python!\n",
+    "\n",
+    "You might normally start with a pretrained tokenizer, but this exercise will\n",
+    "help you get to know see some of the tokenization steps better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Sample Text\n",
+    "\n",
+    "Let's first define some sample text you will use to test your tokenization\n",
+    "steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "\n",
+    "print(sample_text)"
    ]
   },
   {
@@ -36,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -64,6 +93,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your normalization\n",
+    "normalize_text(sample_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +123,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your pretokenization step (after normalizing the text)\n",
+    "normalized_text = normalize_text(sample_text)\n",
+    "pretokenize_text(normalized_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +165,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your tokenization (that uses normalizing & pretokenizing functions)\n",
+    "tokenize_text(sample_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,52 +202,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test Your Tokenization\n",
-    "\n",
-    "See how our tokenization pipeline handles the sample text below"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Mr. Louis continued to say, \"Penguins are important, \\nbut we mustn\\'t forget the nuumber 1 priority: the READER!\"\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
-    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
-    "'''\n",
-    "\n",
-    "sample_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[BOS]', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '[EOS]']\n"
-     ]
-    }
-   ],
-   "source": [
+    "# Test full pipeline (normalizing, pretokenizing, tokenizing, & postprocessing)\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
     "\n",
@@ -218,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,19 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokens:\n",
-      "['[BOS]', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '[EOS]']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use sample text for testing\n",
     "sample_text = sample_corpus[0]\n",
@@ -302,19 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Encoded Tokens:\n",
-      "[7, 31, 54, 20, 35, 59, 47, 50, 45, 28, 12, 13, 50, 1, 32, 24, 57, 30, 58, 15, 34, 3, 41, 46, 15, 17, 48, 45, 11]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test encode()\n",
     "encoded_tokens = encode(tokens)\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,22 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokens:\n",
-      "['[BOS]', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '[EOS]']\n",
-      "\n",
-      "Encoded Tokens:\n",
-      "[7, 31, 54, 20, 35, 59, 47, 50, 45, 28, 12, 13, 50, 1, 32, 24, 57, 30, 58, 15, 34, 3, 41, 46, 15, 17, 48, 45, 11]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use sample text for testing\n",
     "sample_text = sample_corpus[0]\n",
@@ -385,19 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decoded Tokens:\n",
-      "['[BOS]', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '[EOS]']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test out decode()\n",
     "decoded_tokens = decode(encoded_tokens)\n",
