--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -21,7 +21,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tokenization Steps"
+    "# Tokenization Steps\n",
+    "\n",
+    "In this exercise, you'll code your own tokenizer from scratching using base\n",
+    "Python!\n",
+    "\n",
+    "You might normally start with a pretrained tokenizer, but this exercise will\n",
+    "help you get to know see some of the tokenization steps better."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Sample Text\n",
+    "\n",
+    "Let's first define some sample text you will use to test your tokenization\n",
+    "steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
+    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
+    "'''\n",
+    "\n",
+    "print(sample_text)"
    ]
   },
   {
@@ -50,6 +79,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your normalization\n",
+    "normalize_text(sample_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,6 +105,17 @@
     "    # TODO: Pretokenize normalized text\n",
     "    smaller_pieces = list()\n",
     "    return smaller_pieces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your pretokenization step (after normalizing the text)\n",
+    "normalized_text = normalize_text(sample_text)\n",
+    "pretokenize_text(normalized_text)"
    ]
   },
   {
@@ -92,6 +142,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test out your tokenization (that uses normalizing & pretokenizing functions)\n",
+    "tokenize_text(sample_text)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,33 +172,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test Your Tokenization\n",
-    "\n",
-    "See how our tokenization pipeline handles the sample text below"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
-    "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
-    "'''\n",
-    "\n",
-    "sample_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Test full pipeline (normalizing, pretokenizing, tokenizing, & postprocessing)\n",
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
     "\n",
