Fix subheading types for steps

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization"
+    "## Normalization"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pretokenization"
+    "## Pretokenization"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenization"
+    "## Tokenization"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Postprocessing"
+    "## Postprocessing"
    ]
   },
   {
