--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization"
+    "## Normalization"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pretokenization"
+    "## Pretokenization"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenization"
+    "## Tokenization"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Postprocessing"
+    "## Postprocessing"
    ]
   },
   {
