Add more details re:outputs for step descriptions

--- a/exercise-2-encoding-text/solution/encoding.ipynb
+++ b/exercise-2-encoding-text/solution/encoding.ipynb
@@ -60,7 +60,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalization"
+    "## Normalization\n",
+    "\n",
+    "This step is where you'll normalizae your text by converting to lowercase,\n",
+    "removing accented characters, etc.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized to:\n",
+    "```\n",
+    "did uncle max like the jalapeno dip\n",
+    "```"
    ]
   },
   {
@@ -76,7 +88,7 @@
    "outputs": [],
    "source": [
     "def normalize_text(text: str) -> str:\n",
-    "    # COMPLETE: Normalize incoming text; can be multiple actions to normalize text\n",
+    "    # COMPLETE: Normalize incoming text; can be multiple actions\n",
     "    # Only keep ASCII letters, numbers, punctuation, and whitespace characters\n",
     "    acceptable_characters = (\n",
     "        string.ascii_letters\n",
@@ -106,7 +118,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pretokenization"
+    "## Pretokenization\n",
+    "\n",
+    "This step will take in the normalized text and pretokenize the text into a list\n",
+    "of smaller pieces.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized & then pretokenized to:\n",
+    "```\n",
+    "[\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip?',\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -137,7 +169,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenization"
+    "## Tokenization\n",
+    "\n",
+    "This step will take in the list of pretokenized pieces (after the text has \n",
+    "been normalized) into the tokens that will be used.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized, pretokenized, and then tokenized to:\n",
+    "```\n",
+    "[\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip'\n",
+    "    '?',\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -178,7 +231,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Postprocessing"
+    "## Postprocessing\n",
+    "\n",
+    "This final step will take in the list of tokens from the original text and add\n",
+    "any special tokens to the text.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized, pretokenized, and then tokenized to:\n",
+    "```\n",
+    "[\n",
+    "    '[BOS]',\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip'\n",
+    "    '?',\n",
+    "    '[EOS]',\n",
+    "]\n",
+    "```"
    ]
   },
   {
