--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -57,7 +57,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalization"
+    "## Normalization\n",
+    "\n",
+    "This step is where you'll normalizae your text by converting to lowercase,\n",
+    "removing accented characters, etc.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized to:\n",
+    "```\n",
+    "did uncle max like the jalapeno dip\n",
+    "```"
    ]
   },
   {
@@ -73,7 +85,7 @@
    "outputs": [],
    "source": [
     "def normalize_text(text: str) -> str:\n",
-    "    # TODO: Normalize incoming text; can be multiple actions to normalize text\n",
+    "    # TODO: Normalize incoming text; can be multiple actions\n",
     "    normalized_text = ''\n",
     "    return normalized_text"
    ]
@@ -92,7 +104,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pretokenization"
+    "## Pretokenization\n",
+    "\n",
+    "This step will take in the normalized text and pretokenize the text into a list\n",
+    "of smaller pieces.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized & then pretokenized to:\n",
+    "```\n",
+    "[\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip?',\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -122,7 +154,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tokenization"
+    "## Tokenization\n",
+    "\n",
+    "This step will take in the list of pretokenized pieces (after the text has \n",
+    "been normalized) into the tokens that will be used.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized, pretokenized, and then tokenized to:\n",
+    "```\n",
+    "[\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip'\n",
+    "    '?',\n",
+    "]\n",
+    "```"
    ]
   },
   {
@@ -155,7 +208,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Postprocessing"
+    "## Postprocessing\n",
+    "\n",
+    "This final step will take in the list of tokens from the original text and add\n",
+    "any special tokens to the text.\n",
+    "\n",
+    "For example, the text:\n",
+    "```\n",
+    "Did Uncle Max like the jalapeño dip?\n",
+    "```\n",
+    "might be normalized, pretokenized, and then tokenized to:\n",
+    "```\n",
+    "[\n",
+    "    '[BOS]',\n",
+    "    'did',\n",
+    "    'uncle',\n",
+    "    'max',\n",
+    "    'like',\n",
+    "    'the',\n",
+    "    'jalapeno',\n",
+    "    'dip'\n",
+    "    '?',\n",
+    "    '[EOS]',\n",
+    "]\n",
+    "```"
    ]
   },
   {
