Specify next_token cuda device (for GPU)

--- a/exercise-3-text-generation/starter/text-generation.ipynb
+++ b/exercise-3-text-generation/starter/text-generation.ipynb
@@ -322,6 +322,7 @@
     "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
+    "            device=device,\n",
     "        )\n",
     "        generated_tokens.append(new_char)\n",
     "    # Returns input string plus the full generated string (of generated tokens)\n",
@@ -605,6 +606,7 @@
     "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
+    "            device=device,\n",
     "        )\n",
     "        generated_tokens.append(new_token)\n",
     "    # List of all token IDs (input text and generated text)\n",
