--- a/exercise-3-text-generation/solution/text-generation.ipynb
+++ b/exercise-3-text-generation/solution/text-generation.ipynb
@@ -324,6 +324,7 @@
     "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
+    "            device=device,\n",
     "        )\n",
     "        generated_tokens.append(new_char)\n",
     "    # Returns input string plus the full generated string (of generated tokens)\n",
@@ -608,6 +609,7 @@
     "            # Temperature & top-k sampling used in determining the next token\n",
     "            temperature=temperature,\n",
     "            topk=topk,\n",
+    "            device=device,\n",
     "        )\n",
     "        generated_tokens.append(new_token)\n",
     "    # List of all token IDs (input text and generated text)\n",
