Use more epochs for GPU instances

--- a/exercise-3-text-generation/solution/text-generation.ipynb
+++ b/exercise-3-text-generation/solution/text-generation.ipynb
@@ -36,7 +36,6 @@
    "outputs": [],
    "source": [
     "# Deterministic training\n",
-    "torch.use_deterministic_algorithms(True)\n",
     "torch.manual_seed(0)\n",
     "\n",
     "# Attempt GPU; if not, stay on CPU\n",
@@ -356,7 +355,8 @@
    "outputs": [],
    "source": [
     "TEST_PHRASE = 'To be or not to be'\n",
-    "epochs = 5\n",
+    "# Use more epochs if not CPU device\n",
+    "epochs = 5 if device == 'cpu' else 25\n",
     "\n",
     "start = start_time()\n",
     "for epoch in range(epochs):\n",
@@ -645,7 +645,8 @@
    "outputs": [],
    "source": [
     "TEST_PHRASE = 'To be or not to be'\n",
-    "epochs = 5\n",
+    "# Use more epochs if not CPU device\n",
+    "epochs = 5 if device == 'cpu' else 25\n",
     "\n",
     "start = start_time()\n",
     "for epoch in range(epochs):\n",
