Fix minor spelling typos

--- a/exercise-3-text-generation/solution/text-generation.ipynb
+++ b/exercise-3-text-generation/solution/text-generation.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "# Defining sequence length that will be taken in at a time by our model\n",
     "sequence_length = 32 # Number of characters\n",
-    "batch_size = 32 # Number \n",
+    "batch_size = 32\n",
     "\n",
     "train_dataset = ShakespeareDataset(encoded_text, sequence_length)\n",
     "train_loader = DataLoader(\n",
@@ -528,12 +528,12 @@
    "source": [
     "# Defining sequence length that will be taken in at a time by our model\n",
     "sequence_length = 32 # Number of tokens\n",
-    "batch_size = 32 # Number \n",
+    "batch_size = 32\n",
     "\n",
     "train_dataset = ShakespeareDataset(encoded_text, sequence_length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
-    "    shuffle=False, # Ensure determinsitic training\n",
+    "    shuffle=False, # Ensure deterministic training\n",
     "    batch_size=batch_size,\n",
     ")"
    ]
