Fix minor spelling typos

--- a/exercise-2-encoding-text/starter/encoding.ipynb
+++ b/exercise-2-encoding-text/starter/encoding.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "## Normalization\n",
     "\n",
-    "This step is where you'll normalizae your text by converting to lowercase,\n",
+    "This step is where you'll normalize your text by converting to lowercase,\n",
     "removing accented characters, etc.\n",
     "\n",
     "For example, the text:\n",
